@@ -1,72 +1,57 @@
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
+import org.w3c.dom.NodeList;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
 public class SimpleTests {
 
-    Solution solution = new Solution();
+    private Solution solution;
+    private NodeList nodeList;
+
+    @Before
+    public void before() {
+        solution = new Solution();
+    }
 
     @Test
     public void testSimple1() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{-2, -1, 0, 0, 1, 2}, 0);
-        List<List<Integer>> expected = List.of(List.of(-2, -1, 1, 2), List.of(-2, 0, 0, 2), List.of(-1, 0, 0, 1));
+        Solution.ListNode node1 = new Solution.ListNode(5, null);
+        Solution.ListNode node2 = new Solution.ListNode(4, node1);
+        Solution.ListNode node3 = new Solution.ListNode(3, node2);
+        Solution.ListNode node4 = new Solution.ListNode(2, node3);
+        Solution.ListNode node5 = new Solution.ListNode(1, node4);
+        Solution.ListNode ac = solution.removeNthFromEnd(node5, 2);
+        List<Integer> actual = new ArrayList<>();
+        while (ac.next != null) {
+            actual.add(ac.val);
+            ac = ac.next;
+        }
+        actual.add(ac.val);
+        List<Integer> expected = new ArrayList<>(List.of(1, 2, 3, 5));
         Assert.assertEquals(expected, actual);
     }
 
     @Test
     public void testSimple2() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{2, 2, 2, 2, 2}, 8);
-        List<List<Integer>> expected = List.of(List.of(2, 2, 2, 2));
-        Assert.assertEquals(expected, actual);
+        Solution.ListNode node1 = new Solution.ListNode(1, null);
+        Solution.ListNode ac = solution.removeNthFromEnd(node1, 1);
+        Assert.assertNull(ac);
     }
-
     @Test
     public void testSimple3() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{2}, 2);
-        List<List<Integer>> expected = Collections.emptyList();
+        Solution.ListNode node1 = new Solution.ListNode(2, null);
+        Solution.ListNode node2 = new Solution.ListNode(1, node1);
+        Solution.ListNode ac = solution.removeNthFromEnd(node2, 1);
+        List<Integer> actual = new ArrayList<>();
+        while (ac.next != null) {
+            actual.add(ac.val);
+            ac = ac.next;
+        }
+        actual.add(ac.val);
+        List<Integer> expected = new ArrayList<>(List.of(1));
         Assert.assertEquals(expected, actual);
     }
-
-    @Test
-    public void testSimple4() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{0}, 0);
-        List<List<Integer>> expected = Collections.emptyList();
-        Assert.assertEquals(expected, actual);
-    }
-
-    @Test
-    public void testSimple5() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{0, 1, 2}, 3);
-        List<List<Integer>> expected = Collections.emptyList();
-        Assert.assertEquals(expected, actual);
-    }
-
-    @Test
-    public void testSimple6() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{-3, -2, -1, 0, 0, 1, 2, 3}, 0);
-        List<List<Integer>> expected = List.of(List.of(-3, -2, 2, 3), List.of(-3, -1, 1, 3), List.of(-3, 0, 0, 3),
-                List.of(-3, 0, 1, 2), List.of(-2, -1, 0, 3), List.of(-2, -1, 1, 2), List.of(-2, 0, 0, 2), List.of(-1, 0, 0, 1));
-        Assert.assertEquals(expected, actual);
-    }
-    @Test
-    public void testSimple7() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{-2,-1,-1,1,1,2,2}, 0);
-        List<List<Integer>> expected = List.of(List.of(-2,-1,1,2), List.of(-1,-1,1,1));
-        Assert.assertEquals(expected, actual);
-    }
-    @Test
-    public void testSimple8() {
-        List<List<Integer>> actual = solution.fourSum(new int[]{1000000000,1000000000,1000000000,1000000000}, -294967296);
-        List<List<Integer>> expected = Collections.emptyList();
-        Assert.assertEquals(expected, actual);
-    }
-//Input
-//[1000000000,1000000000,1000000000,1000000000]
-//-294967296
-//Output
-//[[1000000000,1000000000,1000000000,1000000000]]
-//Expected
-//[]
 }
